Next:
0001755: domapptest.py did not stop on Thorsten's test hub at LBNL

V00-02-00 8-20-07 John Jacobsen john@mail.npxdesigns.com

Several improvements, some major, with the addition of several new tests
and options.

Issues:
0001718: Support multiple python distributions
0001717: Swap LC modes 4 and 5 
0001715: domapptest.py fails to reset status when test restarts
0001716: domapptest.py - MessageSizePulserTest fails on repeat
0001713: Test for issue 1711
0001703: domapptest.py - Make test for SLC header-only hits
0001693: domapptest.py - Add scaler deadtime test
0001690/1683: domapptest.py - Add test to verify that pedestal pattern data are monitored
0001686: domapptest.py - Allow user to select ONLY domapp-related tests
0001684: domapptest.py - Add ability to upload and test new domapp on the fly
0001676: domapptest.py - Adopt fast moni test to verify that new hit counters 
                         in fast moni records agree w/ actual hit counts
0001675: domapptest.py - Check that HW and FAST moni records agree (MPE/SPEs)
0001673: domapptest.py - Add timestamps to output
0001672: domapptest.py - test frequency of new 'fast' monitoring records
0001647: DOMPrep.py fails on RHEL4 hub when built on PCTS; fails on PCTS when built on spts64-build64
0001755: domapptest.py did not stop on Thorsten's test hub at LBNL
0001633: DOMPrep.py fails on RHEL4 domhub
0001623: Add test which interleaves echo messages and comms resets
0001511: DOMPrep.py - tolerate failures to open dev file
==============================================================


V00-01-00 5-31-07 John Jacobsen john@mail.npxdesigns.com

First working version, same functionality as the pythonic part of 
domapp-tools V00-02-01.

Issues:
0001485: Use distutils to package up python part of domapp-tools
0001490: make DOMPrep.py script to put DOMs in iceboot
==============================================================

V00-00-04 5-31-07 john@mail.npxdesigns.com:
First (almost) working version